fixed alignment in about

--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,9 @@
     margin-left: 2px;
     margin-right: 2px;
 }
+
+.about {
+    Display: grid;
+    Grid-template-columns: 1fr 1fr 1fr 1fr;
+    Grid-template-rows: 1fr;
+}
